# T1_construcao

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
infra/: .terraform.tfstate.lock.info  main.tf  terraform.tfstate  terraform.tfstate.backup  user_data.sh
scripts/: export_openapi.py  wait_for_db.py
src/t1_construcao/: main.py
src/t1_construcao/application/dtos/: __init__.py  appointment_dtos.py  pagination_dtos.py  service_dtos.py  user_dtos.py
src/t1_construcao/application/usecases/: __init__.py  cancel_appointment_usecase.py  confirm_appointment_usecase.py  create_appointment_usecase.py  create_service_usecase.py  create_user_usecase.py  delete_appointment_usecase.py  delete_service_usecase.py  delete_user_usecase.py  get_appointment_by_id_usecase.py  get_appointments_list_usecase.py  get_service_by_id_usecase.py  get_services_list_usecase.py  get_user_by_id_usecase.py  get_users_list.py  update_appointment_usecase.py  update_service_usecase.py  update_user_usecase.py
src/t1_construcao/application/usecases/assemblers/: __init__.py  appointment_assembler.py  service_assembler.py  user_assembler.py
src/t1_construcao/controllers/: appointment_controller.py  service_controller.py  user_controller.py
src/t1_construcao/domain/: __init__.py
src/t1_construcao/domain/entities/: __init__.py  appointment_entity.py  base_entity.py  service_entity.py  user_entity.py
src/t1_construcao/domain/interfaces/: __init__.py  appointment_repository.py  service_repository.py  user_repository.py
src/t1_construcao/infrastructure/: __init__.py  _tortoise_config.py  database_starter_service.py
src/t1_construcao/infrastructure/migrations/models/: 0_20250821212400_init.py  1_20250819161905_add_user_model.py
src/t1_construcao/infrastructure/models/: __init__.py  appointment.py  service.py  user.py
src/t1_construcao/infrastructure/repositories/: _repository_meta.py  appointment_repository.py  service_repository.py  user_repository.py
src/t1_construcao/infrastructure/repositories/mappers/: __init__.py  appointment_mapper.py  service_mapper.py
src/t1_construcao/shared/: __init__.py  auth.py  env_vars.py
tests/: conftest.py  test_create_user_usecase.py  test_delete_user_usecase.py  test_get_user_by_id_usecase.py  test_update_user_usecase.py  test_user_assembler.py  test_user_controller.py
